--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -483,3 +483,19 @@
  TUR_governor_of_aleppo_huseyin_kazim_kadri:0 "Governor of Aleppo"
  TUR_governor_of_aleppo_abdulhalik_renda:0 "Governor of Aleppo"
  TUR_only_one_governor_of_aleppo:0 "The government can only have one §YGovernor of Aleppo§!."
+ TUR_governor_of_damascus_hulusi_bey:0 "Governor of Damascus"
+ TUR_governor_of_damascus_hasan_tahsin:0 "Governor of Damascus"
+ TUR_mutasarrif_of_mount_lebanon_yusuf_pasha:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ohannes_kuyumcuyan:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ali_munif_yegenaga:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ismail_hakki_bey:0 "Mutasarrif of Mount Lebanon"
+ TUR_only_one_mutasarrif_of_mount_lebanon:0 "The government can only have one §YMutasarrif of Mount Lebanon§!."
+ TUR_pro_ottoman_pan_islamist:0 "Pro-Ottoman Pan-Islamist"
+ TUR_pro_ottoman_mufti:0 "Pro-Ottoman Mufti"
+ TUR_pro_ottoman_land_owner:0 "Pro-Ottoman Land Owner"
+ TUR_pro_ottoman_journalist:0 "Pro-Ottoman Journalist"
+ TUR_only_one_governor_of_damascus:0 "The government can only have one §YGovernor of Damascus§!."
+ TUR_governor_of_jerusalem_ahmed_macid_goren:0 "Governor of Jerusalem"
+ TUR_governor_of_jerusalem_hussein_bey_al_husayni:0 "Governor of Jerusalem"
+ TUR_only_one_governor_of_jerusalem:0 "The government can only have one §YGovernor of Jerusalem§!."
+ TUR_policy_executer:0 "Policy Executor"
