--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9087,10 +9087,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.263.t: "British capture Fao"
  ww1_england.263.d: "Distressing news comes from the Fao Peninsula. British forces launched a surprise landing operation and successfully captured the Fao Fortress. Despite the valiant efforts of the defenders, the enemy's superior numbers and preparation overwhelmed the positions. The garrison deserted after their main officer, Captain Ibn Abdullah, was killed."
  ww1_england.263.a: "We must reinforce Mesopotamia!"
- ww1_england.264.t: "Ottomans Ask for Armistice"
- ww1_england.264.d: "The Ottoman Empire, exhausted from the war in the middle east and the caucasus, has officially asked for an armistice."
- ww1_england.264.a: "The middle eastern theatre comes to an end!"
- ww1_england.264.b: "We will end this war in [TUR.Capital.GetCapitalVictoryPointName]"
+ ww1_england.264.t: "The [FROM.GetAdjective]s Ask for Armistice"
+ ww1_england.264.d: "[FROM.GetNameDefCap], exhausted from the war in the Middle East and the Caucasus, has officially asked for an armistice. They are ready to accept any harsh conditions. It will be granted the Allies the right to occupy forts controlling the Straits of the Dardanelles and the Bosporus, and to occupy any [FROM.GetAdjective] territory "in case of disorder" threatening their security. The [FROM.GetAdjective] Army (including the [FROM.GetAdjective] Air Force) will be demobilized; and all ports, railways and other strategic points will be made available for use by the Allies."
+ ww1_england.264.a: "The Middle Eastern theatre comes to an end!"
+ ww1_england.265.t: "Armistice of Mudros"
+ ww1_england.265.desc: "[FROM.GetNameDefCap] has effectively surrendered: they recognise that they can no longer wage war and signed the armistice to cease war in the Middle East. Under the truce agreement, the [FROM.GetAdjective] army will be disbanded and all ports, railways and other strategic points in [FROM.GetAdjective] territory will be made available for use by the Allies. In effect, the defeat of the [FROM.GetFactionName] is near."
+ ww1_england.265.a: "Death setence."
+ ww1_england.265.b: "Another victory."
+ ww1_england.265.c: "Damn it, why?"
+ ww1_england.265.d: "The war is about to end."
 
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain.
  ww1_england.52.t: "Egypt breaks from our rule!"
