--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -452,7 +452,7 @@
  STATE_451:0 "Rumeli"
  STATE_452:0 "Marsa Matruh"
  STATE_453:0 "Sinai"
- STATE_454:0 "Palestine"
+ STATE_454:0 "Jerusalem"
  STATE_455:0 "Karak"
  STATE_456:0 "Aswan"
  STATE_457:1 "Eastern Desert"
@@ -882,7 +882,7 @@
  STATE_881:0 "Mamuret-ul-Aziz"
  STATE_882:0 "Oman"
  STATE_883:0 "Suleymaniyah"
- STATE_884:0 "Al Hasakah"
+ STATE_884:0 "Ras al-Ayn"
  STATE_885:0 "Firaq"
  STATE_886:0 "Bahrain"
  STATE_887:0 "Tangier"
