--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1163,15 +1163,27 @@ USA_farm_loans_idea:0 "Farm Loans"
 new_nationalism_railway:0 "Modify §YNew Nationalism§! by:\nConsumer Goods Factories factor: §Y3.0%§!\nStability: §G+2.00%§!"
 
 
-weekly_war_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly War Support: §G+0.10%§!"
+weekly_war_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly War Support: §G+0.40%§!"
+coal_home:0 "Modify §YThe Home Front§! by\nMobilization Speed: §G+20.00%§!\nResources Gain Efficiency: §G+10.00%§!"
+rail_home:0 "Modify §YThe Home Front§! by\nMobilization Speed: §G+20.00%§!\nDaily Political Power Gain: §G+0.10§!"
+
+USA_nationalize_rail:0 "United States Railway Administration"
+sedition_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly Stability: §G+0.10%§!\nStability: §G+15.00%§!\nWar Support: §G+15.00%§!"
+ww1_USA.146.t:0 "The Kaiser, the Beast of Berlin"
+ww1_USA.146.d:0 "The film 'The Kaiser, Beast of Berlin' has finally came out in theaters acorss America. The film depicts the ruthless and diabolical nature of Kaiser Wilhelm, and his truely greedy and imperialist views. In the movie, despite signing a peace treaty with neighboring countries, the Kaiser decides to invade Belguim. When the true extent of Germany's crimes in Belguim are revealed, and the Kaisers direct ordering of the sinking of the RMS Lusitania comes to light, the German generals stage a coup and hand over the Kaiser to the Entente."
+USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
+ww1_USA.146.a:0 "This film shows the true nature of the Kaiser!"
 east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
 4_men_home_front:0 "Modify §YThe Home Front§! by\nWar Support: §G+15.00%§!\nMobilization Speed: §G+10.00%§! "
-home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Division Organization: §R-5.0%§!, Division Organization Regain: §R-5.00%§!)"
+home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Mobilization Speed: §R-50.00%§!)"
+USA_sedition_act:0 "Espionage Act"
 USA_domestic_front:0 "The Home Front"
  USA_the_committee_on_public_information:0 "Committee on Public Information"
 USA_attract_people_east:0 "Attract People to War Industries in the East"
 USA_4_minute_men:0 "4 Minute Men"
-
+ ww1_USA.145.t:0 "American Protective League"
+ ww1_USA.145.d:0 "Many Americans, inspired by the Sediion act, have banded together to form the American Protective League. These patriots plan to privately investigate suspected German sympathizers and counteract the activities of radicals, anarchists, anti-war activists, and socialist labor and political organizations. They've already seen tens of thousands join their ranks and are providing some much appreciated help to our effort in rooting out traitors in the country."
+ ww1_USA.145.a:0 "They are true patriots"
 rad.tt:0 "Every 180 days we will get the event '§YFood Surpluses Increase§!'. \nBuilding up food surpluses will certainly come with §Gbenefits§! once the United States joins The Great War."
 USA_rural_price_controls:0 "Agricultural Price Supports"
 USA_rural_price_controls_desc:0 "We must ensure a stable market for our farmers, and agricultural price supports is just the way to do this. Setting fair maximum and minimum prices will ensure a fair playing field in the agricultural market, while offering to buy up surplus agricultural production will ensure that farmers produce as much as they can."
