--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8206,7 +8206,7 @@ not_pro.tt:0 "The administration is not §lLeaning Progressive§! or §SFirmly P
 USA_lean_progressive:0 "§lLeaning Progressive§!"
 USA_moderate:0 "§YRelatively Centrist§!"
 USA_cons:0 "§cLeaning Conservative§!"
-rec_less_s.tt:0 "We will recieve less §tsocialist§! resistance during World War One"
+rec_less_s.tt:0 "§tSocialist§! groups and §Sleft§! leaning labor groups will be much more supportive of the government war effort if §YThe Great War§! reaches America."
 wilshiri.tt:0 "The administration will shift §cright§!"
 wilshile.tt:0 "The administration will shift §Sleft§!"
 secretary_of_interior:0 "Secretary of the Interior"
