--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4889,6 +4889,14 @@ ww1_USA.147.a:0 "Even Mutt and Jeff know the importance of serving their great c
  ww1_ottoman.50.a:0 "Sure, we will assist."
  ww1_ottoman.50.b:0 "We already tried to reform that backward army, no more!"
  ww1_ottoman.51.t:0 "Black Sea Raid"
+ww1_USA.149.t:0 "The American Federation of Labor Opposes the War Effort"
+ww1_USA.149.d:0 "One of the largest labor groups in the United States, the AFL, has announced it 'cannot, in good faith, support this imperalist war in which America has no business in.' While still on the left, the AFL is much more moderate then groups like the IWW, and thus some in the government thought it would be possible to gain their endorsement for the war. Either way, this has not come to be. With the AFL opposing us, strikes are expected to increase heavily amongst disastified and low paid, low skilled workers who have been increasingly exploited to help produce more materials for the war effort."
+ww1_USA.149.a:0 "Expected from a bunch of no good anarchists!"
+ww1_USA.148.t:0 "The American Federation of Labor Supports the War Effort"
+ww1_USA.148.d:0 "In a somewhat suprising statement, the American Federation of Labor, a left wing trade unionist group, has came out in favor of Americas entry in The Great War. Not only did he not condemn the war, he gave a suprisingly strong statement encouraging workers to cooperate with the government, and for the unemployed to enlist. Much more popular then the IWW, the AFL enjoys high influence amongst American unions and thus their strong endorsement of the government is expected to help with our factories production."
+ww1_USA.148.a:0 "Many in the left could learn from these patriots."
+gotten_cause_socialists_like_you:0 "We recieved this event because we complete the focus §YTheory of 'Socialism and Democracy'§!"
+gotten_cause_socialists_hate_you:0 "We recieved this event because we have §Rnot§! complete the focus §YTheory of 'Socialism and Democracy'§!"
  ww1_ottoman.51.d:0 "A group of [TUR.GetAdjective] ships invaded the territorial waters of Crimea this morning. They opened fire on the bays of Sevastopol and Odessa, damaging and sinking several ships. Also, the Black Sea Fleet lost part of its oil reserves - the [TUR.GetAdjective] raiders blew up tanks in the port.\n\nThis act of aggression means only one thing - the [TUR.GetName] entered the war."
  ww1_ottoman.51.a:0 "Do they want revenge? They will get it."
  ww1_ottoman.52.t:0 "Berlin-Baghdad Railway"
