--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1162,10 +1162,12 @@ USA_firmly_progressive_mission:0 "Progressive Fever Amongst The Administration"
 USA_farm_loans_idea:0 "Farm Loans"
 new_nationalism_railway:0 "Modify §YNew Nationalism§! by:\nConsumer Goods Factories factor: §Y3.0%§!\nStability: §G+2.00%§!"
 
-
+USA_liberty_bonds:0 "Liberty Bonds"
 weekly_war_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly War Support: §G+0.40%§!"
 coal_home:0 "Modify §YThe Home Front§! by\nMobilization Speed: §G+20.00%§!\nResources Gain Efficiency: §G+10.00%§!"
 rail_home:0 "Modify §YThe Home Front§! by\nMobilization Speed: §G+20.00%§!\nDaily Political Power Gain: §G+0.10§!"
+afl_home:0 "Modify §YThe Home Front§! by\nFactory Output: §G+2.50%§!"
+afl_home_no:0 "Modify §YThe Home Front§! by\nFactory Output: §R-2.50%§!"
 
 USA_nationalize_rail:0 "United States Railway Administration"
 sedition_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly Stability: §G+0.10%§!\nStability: §G+15.00%§!\nWar Support: §G+15.00%§!"
@@ -1175,6 +1177,7 @@ USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
 ww1_USA.146.a:0 "This film shows the true nature of the Kaiser!"
 east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
 4_men_home_front:0 "Modify §YThe Home Front§! by\nWar Support: §G+15.00%§!\nMobilization Speed: §G+10.00%§! "
+5_men_home_front:0 "Modify §YThe Home Front§! by\nConsumer Goods Factories factor: §Y-20.0%§!"
 home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Mobilization Speed: §R-50.00%§!)"
 USA_sedition_act:0 "Espionage Act"
 USA_domestic_front:0 "The Home Front"
