1912 Military Conferance + Focus Changes

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -32,14 +32,13 @@ GER_karl_helfferich:0 "Karl Helfferich"
 #Events
 
 #Agadir aftermath
-ww1_germanrework.1.t:0 "Germany's disgrace"
+ww1_germanrework.1.t:0 "Germany's Disgrace"
  ww1_germanrework.1.d:0 "Despite the grandiose posturing and saber-rattling, the end result of the Agadir crisis has been a diplomatic embarrassment. The crisis not only revealed Germany's weak position in the global arena but also severely damaged its prestige. The failure to secure any significant gains from the showdown with France has led to widespread criticism from both within the government and the general public. The Treaty of Fez, which concluded the crisis, saw Germany receive meager concessions in the Congo while France consolidated its hold over Morocco, a clear indicator of German diplomatic failure.\n\nThe public and political backlash has been particularly harsh on Chancellor Theobald von Bethmann Hollweg, whose handling of the situation is seen as weak and indecisive. Many view his leadership as responsible for the national humiliation, arguing that a stronger stance or better negotiation tactics could have yielded more favorable outcomes. The Chancellor's popularity has plummeted, and there is a growing call for his dismissal as a means to restore confidence in the government's ability to uphold German interests and prestige on the world stage. The question now facing the Kaiser is whether to replace Hollweg in hopes of revitalizing the leadership or to endure the current political turmoil with the same leadership."
  ww1_germanrework.1.a:0 "Hollweg should stay"
  ww1_germanrework.1.b:0 "The Kaiser pressures Hollweg to resign"
-ww1_germanrework.2.t:0 "Hollweg's replacement"
- ww1_germanrework.2.d:0 "With the dismissal of Chancellor Theobald von Bethmann Hollweg, Germany stands at a crossroads. The recent humiliation of the Agadir Crisis has shaken the nation's confidence, and the need for strong, decisive leadership is more critical than ever. Two prominent figures have emerged as potential candidates to take up the mantle of Chancellor':' Karl Helfferich, known for his expertise in finance and economic affairs, and Ernst von Heydebrand und der Lasa, a staunch conservative with a reputation for his firm stance on national issues.\n\nKarl Helfferich promises to bring a pragmatic and economic-focused approach to governance, potentially stabilizing Germany's financial situation and restoring some measure of international respect. On the other hand, Ernst von Heydebrand und der Lasa advocates for a more traditional, nationalist agenda, aiming to restore Germany's pride and assertiveness on the world stage. The decision now rests with the leadership, as the nation looks forward to a new direction in these trying times."
- ww1_germanrework.2.a:0 "Appoint Karl Helfferich"
- ww1_germanrework.2.b:0 "Appoint Ernst von Heydbrand"
+ww1_germanrework.2.t:0 "The Kaiser Appoints von Heydbrand"
+ ww1_germanrework.2.d:0 ""
+ ww1_germanrework.2.a:0 "Good luck to the new chancellor"
 ww1_germanrework.19.t:0 "Factions in the Right"
  ww1_germanrework.19.d:0 "The new chancellor is no staunch negotiator like von Hollweg was and will now have to manage the right-wing in his favor if he wishes to stay in power. The traditionalist conservatives and the pan-German nationalists see this as an opportunity to assert their influence over the right-wing factions that the new Chancellor relies on to stay in power. These nationalistic groups, driven by a desire to restore German prestige after the crisis and assert a more aggressive national policy, are vying for control and seeking to push their agendas within the Reichstag.\n\nAmidst this internal power struggle, the Chancellor faces another critical challenge':' the looming threat of the Social Democratic Party in the upcoming 1912 election. The SPD's growing popularity poses a significant risk to the current administration's stability and conservative values. To maintain power and prevent a potential shift in political dominance, the Chancellor must navigate the complex dynamics of right-wing politics, appeasing influential factions while also formulating strategies to curtail the SPD's appeal to the masses. The next few months will be pivotal in determining the future direction of Germany, as the new Chancellor strives to consolidate power and guide the nation through these turbulent times."
  ww1_germanrework.19.t:0 "The Chancellor should tread with care"
@@ -95,6 +94,11 @@ ww1_germanrework.12.t:0 "Mining Accident in the Ruhr"
 ww1_germanrework.18.t:0 "The Findings of the National Census"
  ww1_germanrework.18.d:0 ""
  ww1_germanrework.18.a:0 "Perhaps German society is not as progressive as we thought..."
+
+#1912 Miltary Conferance
+ww1_germanrework.20.t:0 "The Kaiser Calls for a Military Conferance"
+ ww1_germanrework.20.d:0 ""
+ ww1_germanrework.20.a:0 "A major war is on the horizon"
 
 #Decisions
 
