--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8963,5 +8963,60 @@ FRA_is_redundings_tanks:0 "Is Refunding a Tank Contract"
 
 FRA_is_being_refunded_plus_extra:0 "Is Being Refunded by France"
 
+show_regions_text:0 "Regions Map"
+
 german_region_alsace_lorraine:0 "§Y[28.getName]§!"
 german_region_alsace_lorraine_desc:0 "§Y[28.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+german_region_alsace_lorraine_desc_lore:0 "§LAlsace-Lorraine (German: Elsaß-Lothringen), officially the Imperial Territory of Alsace-Lorraine (German: Reichsland Elsaß-Lothringen), was a former territory of the German Empire, located in modern day France. It was established in 1871 by the German Empire after it had occupied the region during the Franco-Prussian War. The region was officially ceded to the German Empire in the Treaty of Frankfurt.§!\n\n§Y[28.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+
+german_region_hesse:0 "§YGrand Duchy of Hesse§!"
+german_region_hesse_desc:0 "§Y[55.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+german_region_hesse_desc_lore:0 "§LThe Grand Duchy of Hesse and by Rhine (German: Großherzogtum Hessen und bei Rhein) was a grand duchy in western Germany that existed from 1806 to 1918. The grand duchy originally formed from the Landgraviate of Hesse-Darmstadt in 1806 as the Grand Duchy of Hesse (German: Großherzogtum Hessen). It assumed the name Hesse und bei Rhein in 1816 to distinguish itself from the Electorate of Hesse, which had formed from neighbouring Hesse-Kassel. Colloquially, the grand duchy continued to be known by its former name of Hesse-Darmstadt.§!\n\n§Y[55.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+
+german_region_baden:0 "§YGrand Duchy of Baden§!"
+german_region_baden_desc:0 "§Y[986.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+
+german_region_thurigen:0 "§Y[60.getName]§!"
+german_region_thurigen_desc:0 "§Y[60.getName]§! has §Y7 Votes§! in the §YBundesrat§!."
+
+german_region_wuttemberg:0 "§YKingdom of Württemberg§!"
+german_region_wuttemberg_desc:0 "§Y[50.getName]§! has §Y4 Votes§! in the §YBundesrat§!."
+
+german_region_bavaria:0 "§YKingdom of Bavaria§!"
+german_region_bavaria_desc:0 "§YBavaria§! has §Y6 Votes§! in the §YBundesrat§!."
+
+german_region_hanseatic_cities:0 "§YFree and Hanseatic Cities§!"
+german_region_hanseatic_cities_desc:0 "§YHanseatic Cities§! has §Y3 Votes§! in the §YBundesrat§!."
+
+german_region_Mecklenburg_Schwerin:0 "§YGrand Duchy of Mecklenburg-Schwerin§!"
+german_region_Mecklenburg_Schwerin_desc:0 "§YMecklenburg-Schwerin§! has §Y2 Votes§! in the §YBundesrat§!."
+
+german_region_merklenburg_sterliz:0 "§YGrand Duchy of Mecklenburg-Strelitz§!"
+german_region_merklenburg_sterliz_desc:0 "§YMecklenburg-Strelitz§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_oldenburg:0 "§YGrand Duchy of Oldenburg§!"
+german_region_oldenburg_desc:0 "§YOldenburg§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_saxony:0 "§YKingdom of Saxony§!"
+german_region_saxony_desc:0 "§YSaxony§! has §Y4 Votes§! in the §YBundesrat§!."
+
+german_region_Schaumburg_lippe:0 "§YPrincipality of Schaumburg-Lippe§!"
+german_region_Schaumburg_lippe_desc:0 "§YSchaumburg-Lippe§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_lippe:0 "§YPrincipality of Lippe§!"
+german_region_lippe_desc:0 "§YLippe§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_Brunswick:0 "§YDuchy of Brunswick§!"
+german_region_Brunswick_desc:0 "§YBrunswick§! has §Y2 Votes§! in the §YBundesrat§!."
+
+german_region_Waldeck_Pyrmont:0 "§YPrincipality of Waldeck-Pyrmont§!"
+german_region_Waldeck_Pyrmont_desc:0 "§YWaldeck-Pyrmont§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_anhalt:0 "§YDuchy of Anhalt§!"
+german_region_anhalt_desc:0 "§YAnhalt§! has §Y1 Votes§! in the §YBundesrat§!."
+
+german_region_prussia:0 "§YKingdom of Prussia§!"
+german_region_prussia_desc:0 "§YPrussia§! has §Y17 Votes§! in the §YBundesrat§!."
+
+GER_region_description_tt:0 "[GER_region_description_tt]"
+GER_region_description_desc:0 "[GER_region_description]"
