Military focuses desc

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10569,21 +10569,41 @@ FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing
  
 #Saudis
  SAU_Convene_Shura: "Convene The Shura Majlis"
- SAU_expand_ikhwan_militias: "Expand Ikhwan Militias"
+ SAU_Convene_Shura_desc: "It is time to convene the council of advisors to consolidate power within the Saudi domain. This crucial assembly will enhance our governance, unify our strategies, and ensure alignment with the kingdom's long-term objectives. By bringing together our most trusted advisors, we can address pressing issues, strengthen our influence, and implement policies more effectively. The consolidation of power will enable us to respond swiftly to challenges and secure a prosperous future for the Saudi domain."
+ SAU_expand_ikhwan_militias: "Expand Tribal Militias"
+ SAU_expand_ikhwan_militias_desc: "Several tribes have been settling and forming their own militias. One group calls themselves the Ikhwan. Although they are not well organized yet, they are poised to grow stronger. Therefore, we should support them and provide them with our banner."
  SAU_conscript_tribes: "Conscript Tribesmen"
+ SAU_conscript_tribes_desc: "There are many tribes in the region, and we need to recruit them to fight for the Saudi state. Their support is crucial for strengthening our forces and securing our dominance. By integrating these tribes into our ranks, we can build a united front and enhance our capabilities."
  SAU_camelry: "Camelry Units"
+ SAU_camelry_desc: "Camels have been serving Arabs for centuries and are the perfect means of transportation in the vast deserts of Nejd. They are called 'the Ships of the Desert' for a reason. These resilient animals are uniquely adapted to the harsh desert environment, providing reliable mobility and sustenance in conditions where other forms of transport would fail."
  SAU_Bedouin_Tactics: "Bedouin Tactics"
+ SAU_Bedouin_Tactics_desc: "The wandering Bedouins, who have lived in these deserts for generations, use unique tactics to survive. They navigate by the stars, conserve water by traveling during cooler parts of the day, and utilize the natural shelter and resources provided by the landscape. Their intimate knowledge of the desert allows them to thrive in an environment that is inhospitable to most. "
  SAU_Bedouin_logistics: "Bedouin Logistics"
+ SAU_Bedouin_logistics_desc: "Bedouin logistics are equally impressive; they carry essential supplies such as dried foods and water in portable, lightweight containers, and they establish temporary camps that can be quickly assembled and dismantled. This combination of knowledge, strategy, and efficient resource management allows them to thrive in an environment that is inhospitable to most."
  SAU_confiscate_ottoman_weapones: "Confiscate Ottoman Arms"
+ SAU_confiscate_ottoman_weapones_desc: "Many Ottoman patrols and garrisons cross the Nejd border. We should raid them and seize their equipment. These raids will disrupt their operations and provide us with valuable resources to strengthen our forces. By targeting these patrols and garrisons, we can weaken their presence in the region and enhance our strategic advantage. Additionally, capturing their supplies will boost our own capabilities, making our forces more formidable in the ongoing struggle."
  SAU_Ihsaa_naval_base: "Dammam Naval Base"
+ SAU_Ihsaa_naval_base_desc: "Now that we have conquered Ihsa'a and its warm ports, we can begin planning for a Saudi navy, starting by building a naval base in Dammam. Establishing this naval base will be the cornerstone of our maritime strategy, allowing us to project power and secure our interests along the coastline. With access to Ihsa'a's ports, we can develop a fleet that ensures the protection of our waters, facilitates trade, and enhances our regional influence. This initiative will not only strengthen our military capabilities but also promote economic growth and stability in the region."
  SAU_Darin_Airfield: "Seize Darin Airfield"
+ SAU_Darin_Airfield_desc: "The British have built a small airfield and abandoned it on the island of Tarout, next to the town of Darin. We should seize and utilize it. Taking control of this airfield will provide us with a strategic asset, enhancing our aerial capabilities and extending our reach in the region."
  SAU_intergrate_ikhwan_to_military: "Military Centralization"
+ SAU_intergrate_ikhwan_to_military_desc: "The Saudi state needs to modernize and centralize its military instead of relying on militias and tribes. This transition is crucial for enhancing our defense capabilities and ensuring national security. By centralizing the military, we can streamline command structures, improve coordination, and implement standardized training and equipment protocols"
  SAU_Purchase_German_Guns: "Purchase German Guns"
+ SAU_Purchase_German_Guns_desc: "The Germans produce the finest and most efficient weapons in the world, so we should request some for our own use. Acquiring German weaponry would bolster our military capabilities significantly, equipping our forces with cutting-edge technology and enhancing our operational effectiveness."
  SAU_recruit_city_militias: "Recruit City Militias"
+ SAU_recruit_city_militias_desc: "Many cities and settlements have their own militias to protect them. We could recruit them to the military and replace them with a modern police force. This transition would enhance security, law enforcement practices, and ensure protecting communities."
  SAU_Arab_Horsemanship: "Arab Horsemanship"
+ SAU_Arab_Horsemanship_desc: "Horses have also been as important as camels in Arab history. While they cannot endure the desert without sustenance like camels, they are invaluable in battles. Their agility, speed, and strength make them essential assets on the battlefield, enabling swift maneuvers and effective cavalry charges. Despite their different roles from camels, horses have historically played a crucial role in military tactics and strategy, contributing to Arab military prowess throughout history."
  SAU_study_mobile_warfare: "Study British Vehicles"
+ SAU_study_mobile_warfare_desc: "Mobile warfare is increasingly popular nowadays. The days of infantry and cavalry charges may soon be eclipsed by the dominance of armored cars in future warfare. Their metal construction grants them resilience against the desert heat, unlike humans and animals. These vehicles offer mobility, firepower, and protection, making them pivotal in modern military strategies."
  SAU_copy_ottoman_army_command: "Copy Ottoman Command"
+ SAU_copy_ottoman_army_command_desc: "The Ottoman Empire is the hegemon of the Middle East and the strongest country here, thanks largely to its modernized military, which draws inspiration from European militaries. This strategic modernization has elevated their military prowess, enabling them to maintain dominance in the region. By adopting European military techniques and technologies, the Ottomans have enhanced their operational capabilities, from logistics to tactics."
  SAU_build_arms_factory: "Build Arms Factory"
+ SAU_build_arms_factory_desc: "nstead of importing weapons, we need to start manufacturing our own to achieve self-reliance. Establishing a domestic arms industry will not only bolster our defense capabilities but also stimulate economic growth and technological advancement. By investing in local weapon production, we can create jobs, build expertise, and reduce dependency on foreign suppliers."
+ SAU_Jihad: "State Mandated Jihad"
+ SAU_Jihad_desc: "Jihad, meaning struggle, represents a pure form of fighting to defend one's fatherland, home, family, and oneself from oppressors or aggressors. Jihad can take various forms, including physical combat, defense, or contributing resources such as money, food, or equipment. Therefore, the state should incorporate jihad into its foreign policy mandate. By integrating jihad principles, the state can uphold its duty to protect its citizens and sovereignty, while also promoting justice and defending against external threats."
+ SAU_renovate_Riyadh_forts: "Renovate Riyadh Forts"
+ SAU_renovate_Riyadh_forts_desc: "The forts and defense systems in the city of Riyadh are outdated, nearly five decades behind current standards. It is imperative that we renovate them to bring them into the 20th century and ensure the protection of the government and its citizens. Upgrading these defenses will enhance our security capabilities, incorporating modern technology and strategic infrastructure to safeguard against contemporary threats."
  SAU_invest_in_city_merchants: "Support City Merchants"
  SAU_establish_millet_system: "Millet System"
  SAU_arable_land_development: "Arable Lands Development"
@@ -10604,8 +10624,6 @@ FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing
  SAU_south_trade: "Oman-Yemen Trade"
  SAU_reform_zakat: "Reform Zakat"
  SAU_establish_mabahith: "Establish the Mabahith"
- SAU_Jihad: "State Mandated Jihad"
- SAU_renovate_Riyadh_forts: "Renovate Riyadh Forts"
  SAU_Dynasty_Politics: "Dynasty Politics"
  SAU_Reform: "Reform the State"
  SAU_get_rid_of_ikhwan: "Get rid of Ikhwan"
