--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -87,7 +87,8 @@
  idea_naval_arms_race_desc:0 "More dreadnoughts! Bigger guns!"
  unification_of_arabia:0 "Arabian Unification Struggle"
  arab_vassal_state:0 "Arab Vassal"
- 
+ SAU_Treaty_of_Darin_idea: "Treaty of Darin"
+ SAU_JBS_Unity_1: "Unification Process"
  superior_enemy:0 "Superior Enemy"
  superior_enemy_desc:0 "Army experience and equipment of our enemies are far ahead of ours."
  albanian_shipyard:0 "Albanian Shipyard"
@@ -3054,6 +3055,7 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  SAU_bedouin_logstics_idea: "Bedoin Logistics"
  SAU_bedouin_tactics_idea: "Bedoin Tactics"
  SAU_Horsemanship: "Horsemanship"
+ 
  SAU_modern_taxes: "Modern Taxation"
  SAU_modern_taxes2: "Accounting Division"
  SAU_egyptian_relief_centers_idea: "Egyptian Aid"
