Military Focus Effects

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -24,6 +24,11 @@ GER_rapid_urbanisation_3_desc:0 ""
 GER_encouraged_german_militarism:0 "Encouraged German Militarism"
 GER_expanding_workforce:0 "Expanding Workforce"
 GER_expanding_workforce_desc:0 ""
+GER_high_command_rivalry_balanced:0 "High Command Rivalry Balanced"
+GER_high_command_rivalry_war_ministry_favoured:0 "War Ministry Favoured"
+GER_high_command_rivalry_war_ministry_dominant:0 "War Ministry Dominant"
+GER_high_command_rivalry_general_staff_favoured:0 "General Staff Favoured"
+GER_high_command_rivalry_general_staff_dominant:0 "General Staff Dominant"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
@@ -96,7 +101,7 @@ ww1_germanrework.18.t:0 "The Findings of the National Census"
  ww1_germanrework.18.a:0 "Perhaps German society is not as progressive as we thought..."
 
 #1912 Miltary Conferance
-ww1_germanrework.20.t:0 "The Kaiser Calls for a Military Conferance"
+ww1_germanrework.20.t:0 "The Kaiser Calls for a Military Conference"
  ww1_germanrework.20.d:0 ""
  ww1_germanrework.20.a:0 "A major war is on the horizon"
 
