More Military Focus Effects

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10611,8 +10611,8 @@ GER_qualitative_strength:0 "Qualitative Strength"
 GER_qualitative_strength_desc:0 ""
 GER_to_be_home_by_christmas:0 "To be Home by Christmas"
 GER_to_be_home_by_christmas_desc:0 ""
-GER_found_deutsche_luftstreitkrafte:0 "Found Deutsche Luftstreitkräfte"
-GER_found_deutsche_luftstreitkrafte_desc:0 ""
+GER_expanding_deutsche_luftstreitkrafte:0 "Expanding the Deutsche Luftstreitkräfte"
+GER_expanding_deutsche_luftstreitkrafte_desc:0 ""
 GER_create_the_first_air_corps:0 "Create the first Air Corps"
 GER_create_the_first_air_corps_desc:0 ""
 
