--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -25,10 +25,17 @@ GER_encouraged_german_militarism:0 "Encouraged German Militarism"
 GER_expanding_workforce:0 "Expanding Workforce"
 GER_expanding_workforce_desc:0 ""
 GER_high_command_rivalry_balanced:0 "High Command Rivalry Balanced"
+GER_high_command_rivalry_balanced_desc:0 ""
 GER_high_command_rivalry_war_ministry_favoured:0 "War Ministry Favoured"
+GER_high_command_rivalry_war_ministry_favoured_desc:0 ""
 GER_high_command_rivalry_war_ministry_dominant:0 "War Ministry Dominant"
+GER_high_command_rivalry_war_ministry_dominant_desc:0 ""
 GER_high_command_rivalry_general_staff_favoured:0 "General Staff Favoured"
+GER_high_command_rivalry_general_staff_favoured_desc:0 ""
 GER_high_command_rivalry_general_staff_dominant:0 "General Staff Dominant"
+GER_high_command_rivalry_general_staff_dominant_desc:0 ""
+GER_subsidised_fighter_production:0 "Subsidised Fighter Production"
+GER_subsidised_fighter_production_desc:0 ""
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
