--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1177,9 +1177,23 @@ USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
 ww1_USA.146.a:0 "This film shows the true nature of the Kaiser!"
 east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
 4_men_home_front:0 "Modify §YThe Home Front§! by\nWar Support: §G+15.00%§!\nMobilization Speed: §G+10.00%§! "
+it_cant_happen_here:0 "Modify §YThe Home Front§! by\nParty Popularity Stability Modifier: §G+10.00%§!"
+broad_side_batte_lines:0 "Modify §YThe Home Front§! by\nResources Gain Efficiency: §G+10.00%§!"
+broad_side_why:0 "Modify §YThe Home Front§! by\nProduction Efficiency Cap: §G+5.00%§!"
+USA_broadside_publications:0 "Broadside Publications"
+positive_event_homefront.tt:0 "We will receive §YEvents§! revolving the publication of §Cpropaganda§! posters encouraging the mobilization of society. These will give us various §Gbonuses§! to §YThe Home Front§! national spirit!"
+food1_front:0 "Modify §YThe Home Front§! by\nStability: §R-25.00%§!\nWar Support: §R-25.00%§!\nArmy Organization Regain Speed: §R-25.00%§!\nFactory Output: §R-20.00%§!"
+food2_front:0 "Modify §YThe Home Front§! by\nStability: §R-20.00%§!\nWar Support: §R-20.00%§!\nArmy Organization Regain Speed: §R-20.00%§!\nFactory Output: §R-15.00%§!"
+food3_front:0 "Modify §YThe Home Front§! by\nStability: §R-15.00%§!\nWar Support: §R-15.00%§!\nArmy Organization Regain Speed: §R-15.00%§!\nFactory Output: §R-10.00%§!"
+food4_front:0 "Modify §YThe Home Front§! by\nStability: §R-10.00%§!\nWar Support: §R-10.00%§!\nArmy Organization Regain Speed: §R-10.00%§!\nFactory Output: §R-5.00%§!"
+food5_front:0 "Modify §YThe Home Front§! by\nStability: §R-5.00%§!\nWar Support: §R-5.00%§!\nArmy Organization Regain Speed: §R-5.00%§!"
+food6_front:0 "§GOur food production and surplus is sufficent enough to negate any negatives from the outbreak of The Great War!§!"
 5_men_home_front:0 "Modify §YThe Home Front§! by\nConsumer Goods Factories factor: §Y-20.0%§!"
 home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Mobilization Speed: §R-50.00%§!)"
 USA_sedition_act:0 "Espionage Act"
+ ww1_USA.152.t:0 "Report on Food Stockpiles"
+ ww1_USA.152.d:0 "The Great War reaching America has meant that food will most likely become much scarcer instead of abundant. While we may have passed legislation to help build up food surpluses, it is doubtful that we will face no food issues at all. Either way, the President has ordered a review of just how much food we have to ensure we make the right decisions in terms of food rationing."
+ ww1_USA.152.a:0 "Well, lets see!"
 USA_domestic_front:0 "The Home Front"
  USA_the_committee_on_public_information:0 "Committee on Public Information"
 USA_attract_people_east:0 "Attract People to War Industries in the East"
@@ -7182,6 +7196,8 @@ USA_register_lobbyists:0 "Register Lobbyists"
  TUR_socialist_consumer_goods_factor_-005:0 "Modify §YSocialist Economy§! by\nConsumer Goods Factories: §Y-5.0%§!"
  TUR_research_speed_factor_005:0 "Modify §YSocialist Economy§! by\nResearch Speed: §G+5.00%§!"
  TUR_production_factory_max_efficiency_factor_01:0 "Modify §YSocialist Economy§! by\n£prod_eff_cap  Production Efficiency Cap: §G+10.00%§!"
+afl_home2:0 "Modify §YThe Home Front§! by\nFactory Output: §G+2.50%§!\nProduction Efficiency Cap: §G+2.50%§!"
+afl_home3:0 "Modify §YThe Home Front§! by\nFactory Output: §G+2.50%§!\nProduction Efficiency Gain: §G+2.50%§!"
  TUR_production_speed_arms_factory_factor_01:0 "Modify §YSocialist Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
  TUR_stability_factor_-01:0 "Modify §YSocialist Economy§! by\nStability: §R-10.00%§!"
  TUR_stability_factor_-01TUR_production_speed_arms_factory_factor_01:0 "Modify §YSocialist Economy§! by\nStability: §R-10.00%§!\n§YMilitary Factory§! construction speed: §G+10.00%§!"
