--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2358,6 +2358,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp:0 "£army_experience §Y15§!"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_minority_decision:0 "Management of Minorities"
+ TUR_minority_syria_decision:0 "Management of Minorities"
  TUR_conscription_in_karak:0 "Conscription in Karak"
  TUR_conscription_in_karak_desc:0 "Druze minority in our empire has been resisting our centralization efforts. As previous Druze rebellion has proven, has proven, we have to strengthen our grip by increasing conscription and tax collection."
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
